--- a/Research-Works.html
+++ b/Research-Works.html
@@ -134,7 +134,7 @@ border-color: #ffffff !important; border-width: 1px !important; borders: top rig
                   <h2 class="u-align-center u-text u-text-palette-5-base u-text-2"> Sign Language Recognition System Using Convolution
 
                     Neural Network</h2>
-                  <p class="u-align-center u-text u-text-3"><b>Anika Khan</b>, Ashikur Rahman Khan<br></span></b>
+                  <p class="u-align-center u-text u-text-3"><b>Anika Khan</b>, Ashikur Rahman Khan, Dr. Nabeel Mohammed<br></span></b>
                     <span class="u-text-palette-3-base"></span>
                     <br>
                   </p>
