--- a/Home.html
+++ b/Home.html
@@ -303,7 +303,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <br>
           <br>
           <span style="font-size: 1.27778rem;">Resume&nbsp;&nbsp;<span class="u-file-icon u-grey-75 u-icon u-text-palette-5-base u-icon-2" data-animation-name="pulse" data-animation-duration="2000" data-animation-direction=""><img src="images/776864-1fb72096.png" alt=""></span> &nbsp;<span class="u-text-palette-4-base">
-              <a href="https://drive.google.com/file/d/1t1ePsbDVL_Dn1SEPP_C_a9dB890A18lp/view?fbclid=IwAR1zLlpnOR0SzI6KrOiEHKV6fdTitwWaeDogufTOJDisZtlxITtuyFTTFXQ" class="u-btn u-btn-round u-button-style u-hover-feature u-hover-palette-1-dark-1 u-palette-1-base u-radius-18 u-text-hover-black u-btn-1" target="_blank">[pdf]</a>
+              <a href="https://drive.google.com/file/d/1jh363eQwVbOs-iiMlfuAgHXrI3gVv_jB/view?usp=drive_link" class="u-btn u-btn-round u-button-style u-hover-feature u-hover-palette-1-dark-1 u-palette-1-base u-radius-18 u-text-hover-black u-btn-1" target="_blank">[pdf]</a>
             </span>
           </span>
         </p>
